--- a/index.html
+++ b/index.html
@@ -1,45 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Memory card Game</title>
-  <link rel="stylesheet" type="text/css" href="./styles.css"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="./style.css">
+    <title>Tic-Tac-Toe</title>
 </head>
 <body>
-  <div class="web">
-    <div class="container">
-      <header>
-        <h1>Matching Game</h1>
-        <div class="topleft">
-          <select name="selection" id="difficulty">
-            <option value="4">Easy 4×4</option>
-            <option value="6">Hard 6×6</option>
-          </select>
-          <button id="newGameBtn">New Game</button>
+    <div class="web">
+        <div class="container">
+            <h1>Tic-Tac-Toe</h1>
+            <h2 id="status">Start with PlayerX</h2>
+
+            <div class="scoreboard">
+                <h3 id="scoreX">PlayerX: 0</h3>
+                <h3 id="scoreO">PlayerO: 0</h3>
+                <h3 id="scoreTie">Tie: 0</h3>
+            </div>
+
+            <div class="board" id="board">
+                <div class="cell" data-index="0"></div>
+                <div class="cell" data-index="1"></div>
+                <div class="cell" data-index="2"></div>
+                <div class="cell" data-index="3"></div>
+                <div class="cell" data-index="4"></div>
+                <div class="cell" data-index="5"></div>
+                <div class="cell" data-index="6"></div>
+                <div class="cell" data-index="7"></div>
+                <div class="cell" data-index="8"></div>
+            </div>
+
+            <button id="resetBtn">Reset</button>
         </div>
-      </header>
-
-      <div class="hud">
-        <div>Moves: <span id="moves"></span></div>
-        <div>Time: <span id="time"></span></div>
-        <div>Score: <span id="score"></span></div>
-      </div>
-
-      <div id="grid" class="grid"></div>
     </div>
-
-    <div id="modal" hidden>
-      <div class="modal-card">
-        <h2>🎉 Congratulation</h2>
-        <p id="modalMsg"></p>
-        <button id="playAgainBtn">Play Again</button>
-      </div>
-    </div>
-    <div>
-
-    </div>
-  </div>
-  <script src="./script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
